# unification-xd

./: .gitignore  CHANGELOG.md  package.yaml  stack.yaml  unification-xd.cabal
app/: Ignore.hs  Main.hs  Pos.hs  Prog.hs  SExpr.hs
app/Prog/: AST.hs  Infer.hs  Parse.hs
examples/: free.scm  hkt.scm  kind-error.scm  list.scm  map.scm  mismatch.scm  no-field.scm  not-a-record.scm  power-of-2.scm  test.scm  undefined.scm
src/: Fixpoint.hs  Unification.hs
src/Control/: Unification.hs
src/Control/Monad/: Inference.hs
src/Control/Monad/Inference/: Carrier.hs  Errors.hs
src/Control/Unification/: Error.hs  Interface.hs  Name.hs  Scheme.hs  Term.hs  Unifiable.hs  Unify.hs
src/Data/: Product.hs
src/Data/Functor/: Fixpoints.hs
