cabal-version:      2.4
name:               unification-xd
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Kirill Andreev
maintainer:         Kirill.Andreev@kaspersky.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

common def
    default-extensions:
        BlockArguments
        DefaultSignatures
        DeriveAnyClass
        DeriveDataTypeable
        DeriveFoldable
        DeriveFunctor
        DeriveGeneric
        DeriveTraversable
        DerivingStrategies
        ExplicitForAll
        FlexibleContexts
        FlexibleInstances
        FunctionalDependencies
        GeneralizedNewtypeDeriving
        ImportQualifiedPost
        LambdaCase
        MultiParamTypeClasses
        ScopedTypeVariables
        StandaloneDeriving
        TemplateHaskell
        TypeApplications
        TypeOperators
        UndecidableInstances

    build-depends:
        base,
        containers,
        microlens-platform,
        mtl,
        shower,
        transformers

    default-language:
        Haskell2010

library
    import: def
    hs-source-dirs: src
    hs-source-dirs:   app
    exposed-modules:  Unification, Fixpoint

executable unification-xD
    import: def
    main-is: Main.hs
    build-depends: unification-xd
    hs-source-dirs: app
    default-language: Haskell2010
